# splendidmoons

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  run.py
splendidmoons/: __init__.py  astro_moon.py  calendar_consts.py  calendar_day.py  calendar_year.py  cli.py  event.py  event_helpers.py  half_moon.py  helpers.py  ical.py  json_cal_day.py  runner.py  uposatha_moon.py
tests/: test_calendar.py  test_csv.py  test_ical.py
tests/data/: events-1978.csv  events-2019.csv  events-2020.csv  events-2021.csv  events-2022.csv  events-2023.csv  fs-calendar-annual-events.csv  mahanikaya-2010-2030.ical  mahanikaya-2010-2030.no-uid.ical
